--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,9 +1,10 @@
 .container__big-card{
-  border: solid white 2px;
+
   margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 50px;
   width: 400px;
-  height: 500px;
+  max-height: 500px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -14,9 +15,11 @@
   font-size: 20px;
   margin-top: 15px;
 }
-
-.big-card__description >p {
+.big-card__description{
   margin-top: 10px;
+}
+.big-card__description >p >a {
+
   color: gray;
 }
 
@@ -26,4 +29,10 @@
 
 .big-card__photo > img{
   width: 100%;
+}
+@media only screen and (max-width: 1060px) {
+  .container__big-card{
+    display: flex;
+    flex-direction: column;
+  }
 }
