--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -5,7 +5,7 @@
 .container__menu-title > h1{
   margin-top: 15px;
   margin-bottom: 15px;
-  font-size: 135px;
+  font-size: 10vw;
   font-weight: bolder;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
